--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #
 
 # Site settings
-title: Idols & Anchors
+title: JackieTFitness
 description: |
-  From the Desk of   
-  Stephen Mitchell   
+  Super Cool Awesome   
+  Slogan About Awesomness   
 owner: Stephen Mitchell # or company name
 first_published: 2018 # if migrating another site, the year of your first publish
 email: spmitchell10@gmail.com
